# rampart-like-game

./: Cargo.toml  README.md  cannon.blend  corner.blend  cube.blend
assets/: cannon.glb  corner.glb  corner_bare.blend
src/: building.rs  camera.rs  devel.rs  firing.rs  helpers.rs  main.rs  model.rs  resources.rs  terrain.rs
src/building/: resources.rs
src/model/: grid.rs  tests.rs
src/terrain/: mesh.rs  tests.rs  textures.rs
