[package]
name = "castle"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.11.0", features = ["png", "bevy_pbr"] }
bevy_ecs_tilemap = "0.11.1"
bevy_hanabi = "0.7.0"
bevy_mod_picking = "0.15.0"
bevy_rapier3d = { version = "0.22.0", features = ["debug-render"] }

# Add this to your Cargo.toml
[profile.dev.package.bevy_rapier3d]
opt-level = 3
