[package]
name = "castle"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.12.1", features = ["png", "bevy_pbr"] }
bevy_ecs_tilemap = "0.12.0"
bevy_hanabi = "0.8.0"
bevy_mod_picking = "0.17.0"
bevy_rapier3d = { version = "0.23.0", features = ["debug-render"] }

# Add this to your Cargo.toml
[profile.dev.package.bevy_rapier3d]
opt-level = 3
