[package]
name = "castle"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13.0", features = ["png", "bevy_pbr"] }
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap" }
bevy_hanabi = "0.10.0"
bevy_mod_picking = "0.18.2"
bevy_rapier3d = { version = "0.25.0", features = ["debug-render"] }

# Add this to your Cargo.toml
[profile.dev.package.bevy_rapier3d]
opt-level = 3
